@@ -17,6 +17,7 @@ Revision history for Rex
 
  [REVISION]
  - Use author tests to check tidiness of bin files
+ - Use Symbol to manipulate Perl symbols
 
 1.11.0 2020-06-05 Ferenc Erki <erkiferenc@gmail.com>
  [BUG FIXES]
